# Axia-Network-wasm-utils

./: Cargo.toml  README.md
cli/check/: main.rs
cli/ext/: main.rs
cli/gas/: main.rs
cli/pack/: main.rs
cli/prune/: main.rs
cli/stack_height/: main.rs
examples/: opt_imports.rs
src/: build.rs  export_globals.rs  ext.rs  graph.rs  lib.rs  optimizer.rs  pack.rs  rules.rs  runtime_type.rs  symbols.rs
src/gas/: mod.rs  validation.rs
src/stack_height/: max_height.rs  mod.rs  thunk.rs
tests/: diff.rs
